--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,15 +1,19 @@
 <resources>
-    <string name="app_name">Cellperf</string>
-    <string-array name="planets_array">
-        <item>Cell Information</item>
-        <item>Measurment</item>
-        <item>Analysis Map</item>
-        <item>Backlog</item>
-        <item>Setup</item>
-    </string-array>
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
-    <string name="action_homepage">ProtocolLabs.com</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+	<string name="app_name">Cellperf</string>
+
+	<string-array name="planets_array">
+		<item>Cell Information</item>
+		<item>Measurment</item>
+		<item>Analysis Map</item>
+		<item>Backlog</item>
+		<item>Setup</item>
+	</string-array>
+
+	<string name="drawer_open">Open navigation drawer</string>
+	<string name="drawer_close">Close navigation drawer</string>
+	<string name="action_websearch">Web search</string>
+	<string name="action_homepage">ProtocolLabs.com</string>
+	<string name="app_not_available">Sorry, there\'s no web browser available</string>
+
+	<string name="action_bar_settings">Settings</string>
 </resources>
